Fix margin issue on mobile PJ POIs

--- a/src/scss/includes/panels/poi_panel.scss
+++ b/src/scss/includes/panels/poi_panel.scss
@@ -499,6 +499,10 @@ $HEADER_SIZE: 40px;
 }
 
 @media (max-width: 640px) {
+  .poi_panel .panel-header {
+    margin-bottom: 0;
+  }
+
   .poi_panel__header {
     margin-left: 0;
   }
